add hesline to register and login

--- a/app/src/css/signInSignUp.css
+++ b/app/src/css/signInSignUp.css
@@ -8,8 +8,8 @@
   right: 50%;
 }
 
-#login > *,
-#register > * {
+#login > form > *,
+#register > form > * {
   display: block;
   margin: 3% auto;
 }
