add more css to site

--- a/app/src/css/signInSignUp.css
+++ b/app/src/css/signInSignUp.css
@@ -4,8 +4,10 @@
   min-width: 300px;
   text-align: center;
   position: fixed;
-  top: 10vh;
-  right: 50%;
+  top: 20vh;
+  right: 40vw;
+  padding: 1%;
+  border-radius: 0.5em;
 }
 
 #login > form > *,
